--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: elixir
 elixir:
+  - 1.2.1
   - 1.1.1
 otp_release:
-  - 18.0
+  - 18.2
+  - 18.1
+script:
+  - MIX_ENV=test mix test --trace
+after_success:
+  - MIX_ENV=test mix coveralls.travis
